--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "quick demo of pulling and reformatting wp post content",
   "main": "fetch-posts.js",
   "dependencies": {
+    "xmlbuilder": "^10.0.0",
     "async-throttle": "^1.1.0",
     "cheerio": "^1.0.0-rc.2",
     "fs": "^0.0.1-security",
     "json-stringify-safe": "^5.0.1",
+    "klaw-sync": "^4.0.0",
     "node-fetch": "^2.2.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node fetch-posts.js"
   },
