--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-fetch": "^2.2.0"
   },
   "scripts": {
-    "start": "node fetch-posts.js"
+    "start": "node fetch-posts.js",
+    "build": "node build-xml.js"
   },
   "author": "",
   "license": "ISC"
